--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,3 +6,46 @@ body {
     font-family: 'Permanent Marker', cursive;
     color: #71c5ee;
 }
+
+/* game section */
+
+#game-section {
+    text-align: center;
+}
+
+.heading {
+    font-size: 5rem;
+    margin-top: 5rem;
+}
+
+#cell-container {
+    display: grid;
+    grid-template-columns: repeat(3, auto);
+    width: 312px;
+    margin: 50px auto;
+
+}
+
+.cell {
+    width: 100px;
+    height: 100px;
+    border: 2px solid;
+    font-size: 80px;
+    cursor: pointer;
+    line-height: 85px;
+}
+
+/** button **/
+
+#game-restart-btn {
+    width: 150px;
+    height: 50px;
+    font-size: 2rem;
+}
+
+/** score area **/
+
+.score-area {
+    margin-top: 50px 0;
+    font-size: 2rem;
+}
