--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,9 @@ body {
     background-color: #025091;
     font-family: 'Permanent Marker', cursive;
     color: #71c5ee;
+    margin: 0;
+    padding: 0;
+    border: none;
 }
 
 /* game section */
@@ -21,7 +24,7 @@ body {
 #cell-container {
     display: grid;
     grid-template-columns: repeat(3, auto);
-    width: 312px;
+    width: 314px;
     margin: 50px auto;
 
 }
@@ -33,6 +36,7 @@ body {
     font-size: 80px;
     cursor: pointer;
     line-height: 85px;
+    box-shadow: 0 0 0 2px;
 }
 
 /** button **/
@@ -48,4 +52,44 @@ body {
 .score-area {
     margin-top: 50px 0;
     font-size: 2rem;
+}
+
+/** footer **/
+
+.footer {
+    text-align: center;
+    margin-bottom: 10px;
+    bottom: 0;
+    width: 100%;
+    height: 100px;
+    position: fixed;
+}
+
+.footer ul {
+    list-style: none;
+    padding: 0;
+}
+
+.footer li {
+    display: inline;
+    padding: 10px 50px;
+}
+
+footer i {
+    color: #71c5ee;
+    font-size: 150%;
+}
+
+/** responsivnes **/
+
+@media screen and (max-width: 500px) {
+    .heading {
+        font-size: 3rem;
+        margin-top: 0.5rem;
+    }
+
+    #cell-container {
+        margin: 20px auto;
+    
+    }
 }
