--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,13 +45,19 @@ body {
     width: 150px;
     height: 50px;
     font-size: 2rem;
+    margin-top: 10px;
 }
 
 /** score area **/
 
 .score-area {
-    margin-top: 50px 0;
+    margin-top: 50px;
     font-size: 2rem;
+}
+
+.score-area p {
+    display: inline;
+    padding: 10px 50px;
 }
 
 /** footer **/
@@ -82,6 +88,14 @@ footer i {
 
 /** responsivnes **/
 
+@media screen and (max-width: 710px) {
+    .score-area p {
+        padding: 10px 50px;
+        display: block;
+    }
+}
+
+
 @media screen and (max-width: 500px) {
     .heading {
         font-size: 3rem;
@@ -92,4 +106,5 @@ footer i {
         margin: 20px auto;
     
     }
+
 }
